# cohortful

./: .gitignore  Makefile
example/: Makefile  arpu.csv  arpu.pq  arpu.sql  arpu_agg.sql
mlcore/: AGENTS.md  env.yml  pyproject.toml
mlcore/mlcore/: app.py  inference_worker.py  worker.py
mlcore/mlcore/cli/: init_duckdb.py
mlcore/mlcore/lib/: queue.py
mlcore/mlcore/models/: cohort_arpu.py
mlcore/mlcore/workers/: inference_worker.py
web/: AGENTS.md  Gemfile  Makefile
web/app/controllers/: datasets_controller.rb  demo_controller.rb
web/app/models/: background_job.rb  dataset.rb
web/app/services/: create_dataset.rb  datalake.rb
web/app/views/datasets/: new.html.erb
web/app/views/demo/: index.html.erb
web/app/views/layouts/: application.html.erb
web/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
web/config/initializers/: duckdb.rb
web/db/: schema.rb
web/db/migrate/: 20251203091859_create_background_jobs.rb  20251206140107_create_datasets.rb
web/script/: create_dataset.rb  create_task.rb
